ioc: added config for more peripherals

--- a/Midgard.ioc
+++ b/Midgard.ioc
@@ -3,7 +3,6 @@ PF4.Mode=IN14
 PC7.GPIOParameters=GPIO_Label
 USART2.IPParameters=VirtualMode-Asynchronous
 TIM3.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
-DSIHOST_D0N.Mode=DSIHost_Video
 PG0.Locked=true
 PI15.Locked=true
 RCC.PLLQCLKFreq_Value=216000000
@@ -14,6 +13,7 @@ SAI1.Instance-SAI_A_MasterWithClock=SAI$Index_Block_A
 PI15.GPIO_Label=SUB_NRST
 PD0.Locked=true
 SH.S_TIM4_CH4.ConfNb=1
+PG10.GPIO_PuPd=GPIO_PULLUP
 PJ2.GPIOParameters=GPIO_Label
 PG2.GPIOParameters=GPIO_Label
 SH.S_TIM11_CH1.ConfNb=1
@@ -39,7 +39,7 @@ PJ14.Locked=true
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PJ12.GPIOParameters=GPIO_Label
-PB3.Mode=JTAG_5_pins
+PB3.Mode=Trace_Asynchronous_SW
 PA8.Locked=true
 PK4.GPIO_Label=BTN0
 PG14.Mode=RMII
@@ -95,6 +95,7 @@ PD15.Signal=S_TIM4_CH4
 PJ1.GPIO_Label=LD1
 RCC.PLLSAIQCLKFreq_Value=64000000
 PE12.Mode=Full_Duplex_Master
+PI5.GPIO_PuPd=GPIO_PULLUP
 Mcu.Pin80=PD13
 SH.S_TIM4_CH1.ConfNb=1
 Mcu.Pin81=PD14
@@ -121,6 +122,7 @@ PC13.Signal=GPIO_Input
 Mcu.Pin76=PD9
 PG3.Locked=true
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2
+PI6.GPIO_PuPd=GPIO_PULLUP
 PD3.Signal=USART2_CTS
 CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2
 Mcu.Pin70=PH12
@@ -309,6 +311,7 @@ SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
 PD5.Mode=Asynchronous
 Mcu.Pin140=PB8
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM8.IPParameters=AutoReloadPreload,EncoderMode
 Mcu.Pin145=PI5
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
 I2C3.IPParameters=Timing
@@ -321,21 +324,21 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.Pin142=PE0
 Mcu.Pin143=PE1
 Mcu.Pin144=PI4
-Mcu.IP10=I2C1
-Mcu.IP12=I2C3
+Mcu.IP10=I2C2
+Mcu.IP12=I2C4
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-Mcu.IP11=I2C2
-Mcu.IP18=SAI1
-Mcu.IP17=RCC
-Mcu.IP19=SPI2
-Mcu.IP14=LTDC
+Mcu.IP11=I2C3
+Mcu.IP18=SPI2
+Mcu.IP17=SAI1
+Mcu.IP19=SPI4
+Mcu.IP14=NVIC
 PF9.Mode=Dual_Bank
-Mcu.IP13=I2C4
-Mcu.IP16=QUADSPI
-Mcu.IP15=NVIC
+Mcu.IP13=LTDC
+Mcu.IP16=RCC
+Mcu.IP15=QUADSPI
 PI4.Locked=true
 RCC.VCOInputFreq_Value=2000000
-PA14.Mode=JTAG_5_pins
+PA14.Mode=Trace_Asynchronous_SW
 PE8.Locked=true
 PF11.Signal=SPI5_MOSI
 DSIHOST_D1P.Signal=DSIHOST_D1P
@@ -343,27 +346,26 @@ PJ12.GPIO_Label=SEG_SEL0
 PK3.GPIOParameters=GPIO_Label
 PE3.Locked=true
 PB7.Signal=I2C1_SDA
-Mcu.IP21=SPI5
-Mcu.IP20=SPI4
-Mcu.IP23=TIM3
-Mcu.IP22=SYS
+Mcu.IP21=SYS
+Mcu.IP20=SPI5
+Mcu.IP23=TIM4
+Mcu.IP22=TIM3
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-Mcu.IP29=UART4
-Mcu.IP28=TIM12
-Mcu.IP25=TIM5
-Mcu.IP24=TIM4
-Mcu.IP27=TIM11
-Mcu.IP26=TIM8
+Mcu.IP29=UART5
+Mcu.IP28=UART4
+Mcu.IP25=TIM8
+Mcu.IP24=TIM5
+Mcu.IP27=TIM12
+Mcu.IP26=TIM11
 PB0.Locked=true
 PA6.Signal=DCMI_PIXCLK
 PJ13.Locked=true
 PB12.Mode=CAN_Activate
 CAN2.BS1=CAN_BS1_2TQ
-Mcu.IP32=USART2
 CAN2.BS2=CAN_BS2_2TQ
-Mcu.IP31=UART8
+Mcu.IP31=USART2
 PG11.Locked=true
-Mcu.IP30=UART5
+Mcu.IP30=UART8
 ProjectManager.ToolChainLocation=
 RCC.DSIFreq_Value=62500000
 PA15.Signal=SYS_JTDI
@@ -392,7 +394,6 @@ PE7.Signal=QUADSPI_BK2_IO0
 PD6.Signal=USART2_RX
 SH.S_TIM11_CH1.0=TIM11_CH1,PWM Generation1 CH1
 PE12.Locked=true
-DSIHOST_D0P.Mode=DSIHost_Video
 Mcu.Pin84=DSIHOST_D0N
 Mcu.Pin85=DSIHOST_CKP
 Mcu.Pin82=PD15
@@ -440,12 +441,12 @@ PH8.Locked=true
 PF6.Locked=true
 PH8.Signal=DCMI_HSYNC
 SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
-PG10.GPIOParameters=GPIO_Label
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,CLKPolarity,CLKPhase,DataSize
+PG10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE0.Locked=true
 RCC.USBFreq_Value=216000000
 PH13.Mode=Asynchronous
-PI5.GPIOParameters=GPIO_Label
+PI5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD10.GPIO_Label=DSI_TE
 PA1.Signal=ETH_REF_CLK
 SH.S_TIM4_CH3.ConfNb=1
@@ -478,8 +479,8 @@ PJ0.Signal=GPIO_Output
 ProjectManager.AskForMigrate=true
 PE0.Signal=UART8_RX
 PE12.Signal=SPI4_SCK
-Mcu.IP8=DSIHOST
-Mcu.IP9=ETH
+Mcu.IP8=ETH
+Mcu.IP9=I2C1
 Mcu.IP6=DAC
 Mcu.IP7=DCMI
 ProjectManager.CoupleFile=false
@@ -490,7 +491,7 @@ PJ5.Signal=GPIO_Input
 PA13.Locked=true
 PC6.GPIOParameters=GPIO_Label
 RCC.HSI_VALUE=16000000
-PI6.GPIOParameters=GPIO_Label
+PI6.GPIOParameters=GPIO_PuPd,GPIO_Label
 SH.S_TIM3_CH4.ConfNb=1
 RCC.PLLM=8
 RCC.PLLN=216
@@ -505,7 +506,7 @@ ADC3.NbrOfConversionFlag=1
 SH.S_TIM8_CH2.ConfNb=1
 PB12.Signal=CAN2_RX
 PJ13.Signal=GPIO_Output
-PG11.GPIOParameters=GPIO_Label
+PG11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA6.Locked=true
 PK5.Locked=true
 RCC.USART1Freq_Value=108000000
@@ -523,7 +524,6 @@ PG6.GPIO_Label=SEG_G
 PG3.GPIOParameters=GPIO_Label
 PK6.GPIO_Label=BTN2
 PJ3.GPIOParameters=GPIO_Label
-DSIHOST_D1P.Mode=DSIHost_Video
 PC6.GPIO_Label=GPIO1
 PC3.Locked=true
 PI11.Locked=true
@@ -541,7 +541,6 @@ RCC.LCDTFTFreq_Value=48000000
 I2C4.Timing=0x20404768
 PE2.Mode=SAI_A_MasterWithClock
 PD4.Signal=USART2_RTS
-DSIHOST_CKP.Mode=DSIHost_Video
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PB6.Mode=I2C
 PC3.Signal=ADCx_IN13
@@ -629,6 +628,7 @@ PI1.Locked=true
 SPI4.VirtualNSS=VM_NSSHARD
 PB10.Signal=QUADSPI_BK1_NCS
 PJ15.Signal=GPIO_Output
+TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 PI9.GPIO_Label=ICM_42605_INT1
 PH6.Mode=Full_Duplex_Master
 ProjectManager.LastFirmware=true
@@ -659,7 +659,7 @@ Mcu.Pin128=PG13
 Mcu.Pin129=PG14
 PI0.Locked=true
 PE7.Locked=true
-PA13.Mode=JTAG_5_pins
+PA13.Mode=Trace_Asynchronous_SW
 ProjectManager.FreePins=false
 PJ1.Locked=true
 ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_15
@@ -693,6 +693,7 @@ PE2.Locked=true
 Mcu.Pin105=PH14
 PA8.Mode=I2C
 Mcu.Pin106=PH15
+SPI2.DataSize=SPI_DATASIZE_8BIT
 Mcu.Pin107=PI0
 Mcu.Pin108=PI1
 PG3.GPIO_Label=SEG_D
@@ -724,7 +725,8 @@ PG6.Locked=true
 SPI4.Direction=SPI_DIRECTION_2LINES
 I2C2.Timing=0x20404768
 PI13.Locked=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_DCMI_Init-DCMI-false-HAL-true,7-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_I2C4_Init-I2C4-false-HAL-true,11-MX_LTDC_Init-LTDC-false-HAL-true,12-MX_QUADSPI_Init-QUADSPI-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_SPI4_Init-SPI4-false-HAL-true,15-MX_SPI5_Init-SPI5-false-HAL-true,16-MX_TIM3_Init-TIM3-false-HAL-true,17-MX_TIM4_Init-TIM4-false-HAL-true,18-MX_TIM8_Init-TIM8-false-HAL-true,19-MX_UART4_Init-UART4-false-HAL-true,20-MX_UART8_Init-UART8-false-HAL-true,21-MX_USART2_UART_Init-USART2-false-HAL-true,22-MX_CAN2_Init-CAN2-false-HAL-true,23-MX_I2C1_Init-I2C1-false-HAL-true,24-MX_I2C3_Init-I2C3-false-HAL-true,25-MX_TIM12_Init-TIM12-false-HAL-true,26-MX_TIM11_Init-TIM11-false-HAL-true,27-MX_ADC3_Init-ADC3-false-HAL-true,28-MX_ADC2_Init-ADC2-false-HAL-true,29-MX_SAI1_Init-SAI1-false-HAL-true,30-MX_TIM5_Init-TIM5-false-HAL-true,31-MX_UART5_Init-UART5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_DCMI_Init-DCMI-false-HAL-true,7-MX_ETH_Init-ETH-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_I2C4_Init-I2C4-false-HAL-true,10-MX_LTDC_Init-LTDC-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_SPI4_Init-SPI4-false-HAL-true,14-MX_SPI5_Init-SPI5-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_TIM4_Init-TIM4-false-HAL-true,17-MX_TIM8_Init-TIM8-false-HAL-true,18-MX_UART4_Init-UART4-false-HAL-true,19-MX_UART8_Init-UART8-false-HAL-true,20-MX_USART2_UART_Init-USART2-false-HAL-true,21-MX_CAN2_Init-CAN2-false-HAL-true,22-MX_I2C1_Init-I2C1-false-HAL-true,23-MX_I2C3_Init-I2C3-false-HAL-true,24-MX_TIM12_Init-TIM12-false-HAL-true,25-MX_TIM11_Init-TIM11-false-HAL-true,26-MX_ADC3_Init-ADC3-false-HAL-true,27-MX_ADC2_Init-ADC2-false-HAL-true,28-MX_SAI1_Init-SAI1-false-HAL-true,29-MX_TIM5_Init-TIM5-false-HAL-true,30-MX_UART5_Init-UART5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+TIM8.EncoderMode=TIM_ENCODERMODE_TI12
 PA0/WKUP.Signal=S_TIM5_CH1
 PB0.GPIO_Label=GPIO2
 RCC.PLLI2SRCLKFreq_Value=192000000
@@ -740,16 +742,17 @@ PI11.GPIOParameters=GPIO_Label
 RCC.I2C3Freq_Value=54000000
 PA12.Locked=true
 PA12.Signal=CAN1_TX
+SPI2.CLKPolarity=SPI_POLARITY_HIGH
 Mcu.UserConstants=
 PE11.Mode=NSS_Signal_Hard_Output
 SPI4.Mode=SPI_MODE_MASTER
 PH7.Locked=true
 PF5.Locked=true
 Mcu.ThirdPartyNb=0
-PH0/OSC_IN.Mode=HSE-External-Oscillator
+PG11.GPIO_PuPd=GPIO_PULLUP
 PD11.GPIO_Label=DSI_RESET
 RCC.HCLKFreq_Value=216000000
-Mcu.IPNb=33
+Mcu.IPNb=32
 RCC.PLLI2SRoutputFreq_Value=192000000
 RCC.SPDIFRXFreq_Value=192000000
 SH.ADCx_IN3.ConfNb=1
@@ -766,7 +769,6 @@ Mcu.Pin0=PE2
 TIM11.IPParameters=Channel
 Mcu.Pin1=PE3
 Mcu.Pin2=PE4
-DSIHOST_D1N.Mode=DSIHost_Video
 Mcu.Pin3=PE5
 PK3.Locked=true
 Mcu.Pin4=PE6
@@ -774,9 +776,7 @@ PD10.GPIOParameters=GPIO_Label
 Mcu.Pin5=PI8
 ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-PA15.Mode=JTAG_5_pins
 PI8.Signal=GPIO_Input
-PB4.Mode=JTAG_5_pins
 PE13.Signal=SPI4_MISO
 PI5.Locked=true
 PI5.Signal=S_TIM8_CH1
@@ -788,7 +788,6 @@ PB8.Locked=true
 PG13.Mode=RMII
 PE4.Mode=SAI_A_MasterWithClock
 PK6.GPIOParameters=GPIO_Label
-PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PE4.Signal=SAI1_FS_A
 PI12.GPIOParameters=GPIO_Label
 ProjectManager.ProjectName=Midgard
@@ -802,6 +801,7 @@ RCC.LSI_VALUE=32000
 DSIHOST_D0N.Locked=true
 PJ1.Signal=GPIO_Output
 PI12.GPIO_Label=TC78H660FTG_MODE
+SPI2.CLKPhase=SPI_PHASE_2EDGE
 RCC.PLLSAIN=96
 PF5.Signal=ADC3_IN15
 PH7.Signal=SPI5_MISO
@@ -871,7 +871,6 @@ PE11.Locked=true
 Mcu.Name=STM32F769B(G-I)Tx
 PD0.Mode=Asynchronous
 PA2.Signal=ETH_MDIO
-DSIHOST_CKN.Mode=DSIHost_Video
 PH15.Mode=Slave_12_bits_External_Synchro
 PD14.Signal=S_TIM4_CH3
 PB3.Signal=SYS_JTDO-SWO
