ioc: Properly configure all SPI interfaces

--- a/Midgard.ioc
+++ b/Midgard.ioc
@@ -1,5 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-VP_TIM5_VS_ClockSourceINT.Mode=Internal
 PF4.Mode=IN14
 PC7.GPIOParameters=GPIO_Label
 USART2.IPParameters=VirtualMode-Asynchronous
@@ -90,7 +89,7 @@ PH6.Locked=true
 PF7.Locked=true
 PC11.Mode=Enable Chip Select for each bank
 PH9.Locked=true
-SPI5.CalculateBaudRate=54.0 MBits/s
+SPI5.CalculateBaudRate=6.75 MBits/s
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 PI7.Mode=Slave_12_bits_External_Synchro
@@ -259,6 +258,7 @@ Mcu.Pin19=PF6
 Mcu.Pin17=PF4
 Mcu.Pin18=PF5
 DSIHOST.FrameBTAAcknowledgeEnable=DSI_FBTAA_DISABLE
+SPI4.CLKPhase=SPI_PHASE_2EDGE
 CORTEX_M7.DisableExec-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_INSTRUCTION_ACCESS_ENABLE
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PI11
@@ -332,10 +332,10 @@ Mcu.Pin132=PK5
 Mcu.Pin133=PK6
 ProjectManager.PreviousToolchain=STM32CubeIDE
 PF1.Locked=true
-TIM3.Period=40000
 PH10.Mode=Slave_12_bits_External_Synchro
 Mcu.Pin149=VP_CRC_VS_CRC
-SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler
+SPI5.CLKPolarity=SPI_POLARITY_HIGH
+SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler,CLKPolarity,CLKPhase,DataSize
 PD5.Mode=Asynchronous
 Mcu.Pin140=PB8
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
@@ -370,7 +370,6 @@ RCC.VCOInputFreq_Value=1000000
 DSIHOST.LPHorizontalFrontPorchEnable=DSI_LP_HFP_ENABLE
 PA14.Mode=Trace_Asynchronous_SW
 PE8.Locked=true
-TIM3.Prescaler=54
 PF11.Signal=SPI5_MOSI
 DSIHOST_D1P.Signal=DSIHOST_D1P
 PJ12.GPIO_Label=SEG_SEL0
@@ -457,6 +456,7 @@ PH15.Locked=true
 PG7.Locked=true
 PG7.Signal=GPIO_Output
 RCC.UART7Freq_Value=54000000
+SPI4.DataSize=SPI_DATASIZE_8BIT
 PC11.Signal=QUADSPI_BK2_NCS
 PI14.Signal=GPIO_Output
 ProjectManager.DefaultFWLocation=true
@@ -579,6 +579,7 @@ RCC.PLLCLKFreq_Value=216000000
 PC12.Signal=UART5_TX
 PG6.GPIO_Label=SEG_G
 PG3.GPIOParameters=GPIO_Label
+SPI5.DataSize=SPI_DATASIZE_8BIT
 CORTEX_M7.PREFETCH_ENABLE=1
 PK6.GPIO_Label=BTN2
 PJ3.GPIOParameters=GPIO_Label
@@ -587,6 +588,7 @@ PC6.GPIO_Label=GPIO1
 PC3.Locked=true
 PI11.Locked=true
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_REGION_FULL_ACCESS
+SPI5.CLKPhase=SPI_PHASE_2EDGE
 PI6.GPIO_Label=ENC_CHB
 PD4.Locked=true
 PC5.Mode=RMII
@@ -612,7 +614,6 @@ PE5.Signal=SAI1_SCK_A
 PE10.Locked=true
 PI3.Mode=Slave_12_bits_External_Synchro
 PB13.Locked=true
-TIM3.Pulse-PWM\ Generation3\ CH3=2000
 PG13.Locked=true
 PA4.Locked=true
 PH0/OSC_IN.Locked=true
@@ -691,7 +692,6 @@ PE8.Mode=Dual_Bank
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 PF1.Mode=I2C
 PA11.Locked=true
-TIM3.Pulse-PWM\ Generation1\ CH1=2000
 PB11.Mode=RMII
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
@@ -729,7 +729,7 @@ PF11.Locked=true
 DSIHOST_D1P.Locked=true
 Mcu.Pin115=PD0
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_FULL_ACCESS
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-Output Compare3 CH3,Channel-Output Compare4 CH4
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-Output Compare3 CH3,Channel-Output Compare4 CH4,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 Mcu.Pin110=PI3
 Mcu.Pin111=PA14
 PA9.Locked=true
@@ -765,7 +765,6 @@ PF6.Mode=Dual_Bank
 SH.S_TIM3_CH1.ConfNb=1
 ProjectManager.ComputerToolchain=false
 PF9.Signal=QUADSPI_BK1_IO1
-VP_TIM4_VS_ClockSourceINT.Mode=Internal
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 PB8.Mode=Slave_12_bits_External_Synchro
 Mcu.Pin109=PI2
@@ -778,7 +777,7 @@ Mcu.Pin107=PI0
 Mcu.Pin108=PI1
 PG3.GPIO_Label=SEG_D
 RCC.I2C2Freq_Value=54000000
-SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler
+SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler,DataSize,CLKPolarity,CLKPhase
 PB0.Signal=S_TIM3_CH3
 PC0.Locked=true
 PC1.Signal=ETH_MDC
@@ -847,6 +846,7 @@ Mcu.Pin9=PI9
 RCC.VCOSAIOutputFreq_Value=384000000
 PI13.Signal=GPIO_Input
 DSIHOST.VerticalFrontPorch=20
+SPI4.CLKPolarity=SPI_POLARITY_HIGH
 PJ2.Locked=true
 RCC.AHBFreq_Value=216000000
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
@@ -878,12 +878,12 @@ PE4.Mode=SAI_A_MasterWithClock
 PK6.GPIOParameters=GPIO_Label
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PE4.Signal=SAI1_FS_A
-SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 PI12.GPIOParameters=GPIO_Label
 ProjectManager.ProjectName=Midgard
 PF15.Mode=I2C
 PH7.Mode=Full_Duplex_Master
-SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 PA7.Locked=true
 PJ12.Signal=GPIO_Output
 CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region1_Settings=0x08000000
@@ -967,7 +967,7 @@ SH.ADCx_IN10.ConfNb=1
 CORTEX_M7.IsShareable-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_ACCESS_SHAREABLE
 CAN2.CalculateTimeQuantum=296.2962962962963
 PF15.Signal=I2C4_SDA
-SPI4.CalculateBaudRate=54.0 MBits/s
+SPI4.CalculateBaudRate=6.75 MBits/s
 PF0.Locked=true
 PE6.Signal=SAI1_SD_A
 PE11.Locked=true
