ioc: TIM2 for Profilecounter, CAN prescaler, SPI prescaler

--- a/Midgard.ioc
+++ b/Midgard.ioc
@@ -1,9 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
 PF4.Mode=IN14
 PC7.GPIOParameters=GPIO_Label
 USART2.IPParameters=VirtualMode-Asynchronous
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
-TIM3.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
 DSIHOST_D0N.Mode=DSIHost_Video
 PG0.Locked=true
 PI15.Locked=true
@@ -37,6 +37,7 @@ PB6.Signal=I2C1_SCL
 PC7.Signal=S_TIM3_CH2
 PD0.Signal=UART4_RX
 PD8.Signal=GPIO_Output
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 PE1.Signal=UART8_TX
 PE14.Locked=true
 RCC.USART3Freq_Value=54000000
@@ -111,14 +112,14 @@ CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region3_Settings=MPU_RE
 Mcu.Pin80=PD13
 SH.S_TIM4_CH1.ConfNb=1
 Mcu.Pin81=PD14
-CAN2.CalculateBaudRate=675000
+CAN2.CalculateBaudRate=1000000
 PK4.Signal=GPIO_Input
 ProjectManager.ProjectFileName=Midgard.ioc
 PH13.Locked=true
 PH13.Signal=UART4_TX
 Mcu.Pin79=PD12
 PI10.Locked=true
-Mcu.PinsNb=155
+Mcu.PinsNb=160
 Mcu.Pin73=PB14
 Mcu.Pin74=PB15
 Mcu.Pin71=PB12
@@ -133,10 +134,10 @@ Mcu.Pin75=PD8
 PC13.Signal=GPIO_Input
 Mcu.Pin76=PD9
 PG3.Locked=true
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler
 PI6.GPIO_PuPd=GPIO_PULLUP
 PD3.Signal=USART2_CTS
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler
 Mcu.Pin70=PH12
 PG9.Mode=Slave_12_bits_External_Synchro
 PC2.Signal=SPI2_MISO
@@ -225,7 +226,6 @@ Mcu.Pin27=PC1
 Mcu.Pin24=PH0/OSC_IN
 Mcu.Pin25=PH1/OSC_OUT
 CORTEX_M7.IPParameters=CPU_DCache,CPU_ICache,PREFETCH_ENABLE,ART_ACCLERATOR_ENABLE,MPU_Control,Enable-Cortex_Memory_Protection_Unit_Region0_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings,Size-Cortex_Memory_Protection_Unit_Region0_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings,Enable-Cortex_Memory_Protection_Unit_Region1_Settings,Size-Cortex_Memory_Protection_Unit_Region1_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region1_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region1_Settings,IsShareable-Cortex_Memory_Protection_Unit_Region1_Settings,IsCacheable-Cortex_Memory_Protection_Unit_Region1_Settings,IsBufferable-Cortex_Memory_Protection_Unit_Region1_Settings,Enable-Cortex_Memory_Protection_Unit_Region2_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region2_Settings,Size-Cortex_Memory_Protection_Unit_Region2_Settings,IsBufferable-Cortex_Memory_Protection_Unit_Region2_Settings,IsCacheable-Cortex_Memory_Protection_Unit_Region2_Settings,IsShareable-Cortex_Memory_Protection_Unit_Region2_Settings,DisableExec-Cortex_Memory_Protection_Unit_Region2_Settings,IsShareable-Cortex_Memory_Protection_Unit_Region0_Settings,IsBufferable-Cortex_Memory_Protection_Unit_Region0_Settings,Enable-Cortex_Memory_Protection_Unit_Region3_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region3_Settings,Size-Cortex_Memory_Protection_Unit_Region3_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region3_Settings,IsShareable-Cortex_Memory_Protection_Unit_Region3_Settings,IsBufferable-Cortex_Memory_Protection_Unit_Region3_Settings,Enable-Cortex_Memory_Protection_Unit_Region4_Settings,BaseAddress-Cortex_Memory_Protection_Unit_Region4_Settings,Size-Cortex_Memory_Protection_Unit_Region4_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region4_Settings,IsShareable-Cortex_Memory_Protection_Unit_Region4_Settings,IsBufferable-Cortex_Memory_Protection_Unit_Region4_Settings,AccessPermission-Cortex_Memory_Protection_Unit_Region2_Settings
-TIM3.Channel-Output\ Compare4\ CH4=TIM_CHANNEL_4
 Mcu.Pin28=PC2
 PC7.GPIO_Label=GPIO0
 Mcu.Pin29=PC3
@@ -284,12 +284,17 @@ RCC.PLLDSIIDF=DSI_PLL_IN_DIV6
 ProjectManager.KeepUserCode=true
 PH14.Signal=DCMI_D4
 PH10.Signal=DCMI_D1
+Mcu.Pin156=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin157=VP_TIM5_VS_ClockSourceINT
 PG2.Signal=GPIO_Output
+Mcu.Pin158=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin159=VP_TIM12_VS_ClockSourceINT
 Mcu.Pin152=VP_RNG_VS_RNG
-CAN2.CalculateTimeBit=1481.48
+CAN2.CalculateTimeBit=999.99
 Mcu.Pin153=VP_SYS_VS_Systick
-Mcu.Pin154=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin154=VP_TIM2_VS_ClockSourceINT
 PG2.Locked=true
+Mcu.Pin155=VP_TIM3_VS_ClockSourceINT
 PH10.Locked=true
 PA11.Mode=CAN_Activate
 PD6.Locked=true
@@ -380,31 +385,33 @@ Mcu.IP21=SAI1
 DSIHOST.BTA_FlowControl=__NULL
 Mcu.IP20=RNG
 Mcu.IP23=SPI4
+VP_TIM12_VS_ClockSourceINT.Mode=Internal
 Mcu.IP22=SPI2
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-Mcu.IP29=TIM8
-Mcu.IP28=TIM5
+Mcu.IP29=TIM5
+Mcu.IP28=TIM4
 Mcu.IP25=SYS
 Mcu.IP24=SPI5
-Mcu.IP27=TIM4
-Mcu.IP26=TIM3
+Mcu.IP27=TIM3
+Mcu.IP26=TIM2
 PB0.Locked=true
 DSIHOST.LPVACTLargestPacketSize=8
 PA6.Signal=DCMI_PIXCLK
 PJ13.Locked=true
 PB12.Mode=CAN_Activate
-CAN2.BS1=CAN_BS1_2TQ
-Mcu.IP32=UART4
+CAN2.BS1=CAN_BS1_6TQ
+Mcu.IP32=TIM12
 CAN2.BS2=CAN_BS2_2TQ
 DSIHOST.IPParameters=NumberOfLanes,Mode,VerticalBackPorch,VerticalFrontPorch,HorizontalSyncActive,HorizontalBackPorch,FrameBTAAcknowledgeEnable,LPHorizontalFrontPorchEnable,LPHorizontalBackPorchEnable,LPVerticalActiveEnable,LPVerticalFrontPorchEnable,LPVerticalBackPorchEnable,LPVerticalSyncActiveEnable,GCEIE,BTA_FlowControl,ClockLaneLP2HSTime,DataLaneHS2LPTime,DataLaneLP2HSTime,LPCommandEnable,LPVACTLargestPacketSize,LPLargestPacketSize,HorizontalLine
-Mcu.IP31=TIM12
-Mcu.IP34=UART8
+Mcu.IP31=TIM11
+Mcu.IP34=UART5
 PG11.Locked=true
-Mcu.IP33=UART5
-Mcu.IP30=TIM11
+Mcu.IP33=UART4
+Mcu.IP30=TIM8
 ProjectManager.ToolChainLocation=
+Mcu.IP36=USART2
 RCC.DSIFreq_Value=62500000
-Mcu.IP35=USART2
+Mcu.IP35=UART8
 PA15.Signal=SYS_JTDI
 PG0.GPIO_Label=SEG_A
 PF8.Signal=QUADSPI_BK1_IO0
@@ -434,6 +441,7 @@ PD6.Signal=USART2_RX
 SH.S_TIM11_CH1.0=TIM11_CH1,PWM Generation1 CH1
 CORTEX_M7.IsShareable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS_SHAREABLE
 PE12.Locked=true
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
 DSIHOST_D0P.Mode=DSIHost_Video
 Mcu.Pin84=DSIHOST_D0N
 Mcu.Pin85=DSIHOST_CKP
@@ -481,7 +489,7 @@ PA9.Mode=Full_Duplex_Master
 PJ5.Locked=true
 CAN1.BS2=CAN_BS2_2TQ
 PF6.Signal=QUADSPI_BK1_IO3
-CAN1.BS1=CAN_BS1_2TQ
+CAN1.BS1=CAN_BS1_6TQ
 PH8.Locked=true
 PF6.Locked=true
 PH8.Signal=DCMI_HSYNC
@@ -494,13 +502,13 @@ RCC.USBFreq_Value=48000000
 PH13.Mode=Asynchronous
 PI5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD10.GPIO_Label=DSI_TE
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 DSIHOST.GCEIE=HAL_DSI_ERROR_NONE
 PA1.Signal=ETH_REF_CLK
 SH.S_TIM4_CH3.ConfNb=1
 RCC.VCOI2SOutputFreq_Value=50000000
 PD2.Mode=Asynchronous
 DSIHOST_CKP.Signal=DSIHOST_CKP
-SPI5.VirtualNSS=VM_NSSHARD
 RCC.PLLSAIPCLKFreq_Value=48000000
 board=custom
 RCC.VCOOutputFreq_Value=432000000
@@ -552,7 +560,6 @@ TIM11.Channel=TIM_CHANNEL_1
 PB7.Locked=true
 PA2.Mode=RMII
 PI14.Locked=true
-PH5.Mode=NSS_Signal_Hard_Output
 CORTEX_M7.CPU_DCache=Enabled
 PD9.Locked=true
 PJ2.GPIO_Label=LD2
@@ -573,6 +580,7 @@ PH12.Locked=true
 SPI2.VirtualType=VM_MASTER
 PB10.Mode=Enable Chip Select for each bank
 CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region3_Settings=0x20040000
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 PG4.Signal=GPIO_Output
 PG4.Locked=true
 RCC.PLLCLKFreq_Value=216000000
@@ -624,7 +632,7 @@ PJ1.GPIOParameters=GPIO_Label
 PI6.Signal=S_TIM8_CH2
 PI3.Signal=DCMI_D10
 PH1/OSC_OUT.Locked=true
-SPI2.CalculateBaudRate=6.75 MBits/s
+SPI2.CalculateBaudRate=843.75 KBits/s
 ADC3.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 PE2.Signal=SAI1_MCLK_A
@@ -634,6 +642,7 @@ PD3.Mode=CTS_RTS
 PE10.Signal=QUADSPI_BK2_IO3
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 RCC.MCO2PinFreq_Value=216000000
+CAN1.Prescaler=6
 PI8.GPIOParameters=GPIO_Label
 DSIHOST.LPVerticalFrontPorchEnable=DSI_LP_VFP_ENABLE
 PD11.Locked=true
@@ -654,12 +663,12 @@ DSIHOST.HorizontalSyncActive=11
 PJ13.GPIOParameters=GPIO_Label
 PI11.Signal=GPIO_Input
 RCC.DFSDMAudioFreq_Value=64000000
-CAN1.CalculateTimeBit=1481.48
+CAN1.CalculateTimeBit=999.99
 SPI5.VirtualType=VM_MASTER
 ProjectManager.CustomerFirmwarePackage=
 CORTEX_M7.IsBufferable-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_ACCESS_BUFFERABLE
 PC4.Mode=RMII
-CAN1.CalculateTimeQuantum=296.2962962962963
+CAN1.CalculateTimeQuantum=111.11111111111111
 PI10.GPIO_Label=LPS22HBTR_INT
 SH.COMP_DAC2_group.ConfNb=1
 DSIHOST.DataLaneLP2HSTime=17
@@ -674,7 +683,7 @@ ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegu
 PG9.Locked=true
 PG9.Signal=DCMI_VSYNC
 CORTEX_M7.IsBufferable-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_ACCESS_BUFFERABLE
-CAN1.CalculateBaudRate=675000
+CAN1.CalculateBaudRate=1000000
 PE1.Mode=Asynchronous
 CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region4_Settings=MPU_REGION_ENABLE
 PE10.Mode=Dual_Bank
@@ -720,6 +729,7 @@ PA1.Mode=RMII
 VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 PE8.Signal=QUADSPI_BK2_IO1
 PI1.Signal=DCMI_D8
+VP_TIM12_VS_ClockSourceINT.Signal=TIM12_VS_ClockSourceINT
 RCC.RNGFreq_Value=48000000
 Mcu.Pin112=PA15
 Mcu.Pin113=PC11
@@ -729,7 +739,7 @@ PF11.Locked=true
 DSIHOST_D1P.Locked=true
 Mcu.Pin115=PD0
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_FULL_ACCESS
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-Output Compare3 CH3,Channel-Output Compare4 CH4,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 Mcu.Pin110=PI3
 Mcu.Pin111=PA14
 PA9.Locked=true
@@ -765,6 +775,7 @@ PF6.Mode=Dual_Bank
 SH.S_TIM3_CH1.ConfNb=1
 ProjectManager.ComputerToolchain=false
 PF9.Signal=QUADSPI_BK1_IO1
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 PB8.Mode=Slave_12_bits_External_Synchro
 Mcu.Pin109=PI2
@@ -777,7 +788,7 @@ Mcu.Pin107=PI0
 Mcu.Pin108=PI1
 PG3.GPIO_Label=SEG_D
 RCC.I2C2Freq_Value=54000000
-SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler,DataSize,CLKPolarity,CLKPhase
+SPI5.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPolarity,CLKPhase,CalculateBaudRate,BaudRatePrescaler
 PB0.Signal=S_TIM3_CH3
 PC0.Locked=true
 PC1.Signal=ETH_MDC
@@ -834,7 +845,7 @@ PG11.GPIO_PuPd=GPIO_PULLUP
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PD11.GPIO_Label=DSI_RESET
 RCC.HCLKFreq_Value=216000000
-Mcu.IPNb=36
+Mcu.IPNb=37
 RCC.PLLI2SRoutputFreq_Value=25000000
 RCC.SPDIFRXFreq_Value=25000000
 SH.ADCx_IN3.ConfNb=1
@@ -849,7 +860,7 @@ DSIHOST.VerticalFrontPorch=20
 SPI4.CLKPolarity=SPI_POLARITY_HIGH
 PJ2.Locked=true
 RCC.AHBFreq_Value=216000000
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
 Mcu.Pin0=PE2
 TIM11.IPParameters=Channel
 Mcu.Pin1=PE3
@@ -868,6 +879,7 @@ CORTEX_M7.IsCacheable-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_ACCESS_
 PE13.Signal=SPI4_MISO
 PI5.Locked=true
 PI5.Signal=S_TIM8_CH1
+CAN2.Prescaler=6
 PI0.Signal=GPIO_Output
 File.Version=6
 PA10.GPIO_Label=HEARTBEAT
@@ -934,6 +946,7 @@ PD12.Locked=true
 RCC.DSITXEscFreq_Value=15625000
 PF7.Mode=Dual_Bank
 PK7.GPIOParameters=GPIO_Label
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 CORTEX_M7.IsBufferable-Cortex_Memory_Protection_Unit_Region4_Settings=MPU_ACCESS_BUFFERABLE
 ProjectManager.TargetToolchain=STM32CubeIDE
 DSIHOST.VerticalBackPorch=20
@@ -960,12 +973,13 @@ PI8.Locked=true
 RCC.APB2Freq_Value=108000000
 PG4.GPIOParameters=GPIO_Label
 PI3.Locked=true
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PC13.GPIOParameters=GPIO_Label
 PF10.Signal=QUADSPI_CLK
 PE14.Mode=Full_Duplex_Master
 SH.ADCx_IN10.ConfNb=1
 CORTEX_M7.IsShareable-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_ACCESS_SHAREABLE
-CAN2.CalculateTimeQuantum=296.2962962962963
+CAN2.CalculateTimeQuantum=111.11111111111111
 PF15.Signal=I2C4_SDA
 SPI4.CalculateBaudRate=6.75 MBits/s
 PF0.Locked=true
